fixed scroll effect and spacing on small screens

--- a/src/components/layout/index.scss
+++ b/src/components/layout/index.scss
@@ -1,5 +1,9 @@
 @import '../../styles/variables.scss';
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   height: 100%;
   padding: 0;
